--- a/src/app/page/assessment-screen/assessment-screen.page.html
+++ b/src/app/page/assessment-screen/assessment-screen.page.html
@@ -1,137 +1,139 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Ishihara test</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="background">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Ishihara test</ion-title>
+      </ion-toolbar>
+    </ion-header>
 
-  <ion-card>
-  <p align="center">
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate1.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate1"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate2.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate2"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate3.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate3"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate7.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate7"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate8.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate8"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate10.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate10"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate11.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate11"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate16.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate16"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate17.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate17"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate22.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate22"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate23.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate23"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate24.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate24"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate25.png" />
-    <ion-card-header>
-      <ion-list>
-        <ion-item>
-          <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate25"></ion-textarea>
-        </ion-item>
-      </ion-list>
-    </ion-card-header>
-    <ion-button (click)="setOpen(true)">Submit</ion-button>
-  </p>
-  </ion-card>
-  <ion-modal [isOpen]="isModalOpen">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Result</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <p>
-          Your total score is {{total}} <br>
-          you have {{redGreen}} points in Red-Green deficiency <br>
-          you have {{deuteran}} points in Deuteranopia or deuteranomaly <br>
-          you have {{protan}} points in Protanopia or protanomaly <br>
-        </p>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+    <ion-card>
+      <p align="center">
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate1.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate1"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate2.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate2"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate3.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate3"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate7.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate7"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate8.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate8"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate10.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate10"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate11.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate11"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate16.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate16"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate17.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate17"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate22.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate22"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate23.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate23"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate24.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate24"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate25.png" />
+        <ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-textarea placeholder="Enter The Number" [(ngModel)]="plate25"></ion-textarea>
+            </ion-item>
+          </ion-list>
+        </ion-card-header>
+        <ion-button (click)="setOpen(true)">Submit</ion-button>
+      </p>
+    </ion-card>
+    <ion-modal [isOpen]="isModalOpen">
+      <ng-template>
+        <ion-header>
+          <ion-toolbar>
+            <ion-title>Result</ion-title>
+            <ion-buttons slot="end">
+              <ion-button (click)="setOpen(false)">Close</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+          <p>
+            Your total score is {{total}} <br>
+            you have {{redGreen}} points in Red-Green deficiency <br>
+            you have {{deuteran}} points in Deuteranopia or deuteranomaly <br>
+            you have {{protan}} points in Protanopia or protanomaly <br>
+          </p>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
+  </div>
 </ion-content>
