--- a/src/app/page/assessment-screen/assessment-screen.page.scss
+++ b/src/app/page/assessment-screen/assessment-screen.page.scss
@@ -1,3 +1,18 @@
+.background {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  background-image: url("../../../assets/page-bg.jpg");
+  display: flow-root;
+  margin: 0;
+  padding: 10px 40px;
+  position: relative;
+  justify-content: center;
+  height: auto;
+  width: auto;
+}
+
 #container {
   text-align: center;
 
