--- a/src/app/page/assessment-screen/assessment-screen.page.html
+++ b/src/app/page/assessment-screen/assessment-screen.page.html
@@ -148,6 +148,7 @@
             you have {{deuteran}} points in Deuteranopia or deuteranomaly <br>
             you have {{protan}} points in Protanopia or protanomaly <br>
           </p>
+          <ion-button (click)="openCam()">Open Camera</ion-button>
         </ion-content>
       </ng-template>
     </ion-modal>
