--- a/src/app/page/camera-screen/camera-screen.page.html
+++ b/src/app/page/camera-screen/camera-screen.page.html
@@ -22,7 +22,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
-        <ion-img [src]="photo.webviewPath"></ion-img>
+        <ion-img  class={{classValue}} [src]="photo.webviewPath"></ion-img>
       </ion-col>
     </ion-row>
   </ion-grid>
