pt-testing-camera: update on page transitions. update photo gallery. added photo removal

--- a/src/app/page/splash-screen/splash-screen.page.html
+++ b/src/app/page/splash-screen/splash-screen.page.html
@@ -10,7 +10,8 @@
           <ion-card-title>Welcome to ColorFulMe App</ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          Lorem Ipsum muna tayo.. blah blah. Experience the app.
+          This is a sample app prototype which provides those who have colorblindness
+          see what normal people can see with photos.
         </ion-card-content>
         <ion-button (click)="getStarted()">Get Started</ion-button>
       </ion-card>
