--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <div [@routeAnimations]="getRouteAnimationData()">
+    <ion-router-outlet></ion-router-outlet>
+  </div>
 </ion-app>
