pt-testing-camera: updates on menu

--- a/src/app/page/camera-screen/camera-screen.page.html
+++ b/src/app/page/camera-screen/camera-screen.page.html
@@ -1,27 +1,46 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Photo Gallery
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <ion-header collapse="condense">
+<ion-menu contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Photo Gallery</ion-title>
+      <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
-        <ion-img [src]="photo.webviewPath" class={{classValue}} (click)="showActionSheet(photo, position)"></ion-img>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button (click)="photoService.addNewToGallery()">
-      <ion-icon name="camera"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-</ion-content>
+  <ion-content class="ion-padding">
+    <ion-button expand="full" href="/assessment">Perform Color Assessment</ion-button>
+    <ion-button expand="full" [disabled]="true">Adjust Color</ion-button>
+    <ion-button expand="full" (click)="photoService.addNewToGallery(classValue)">View Camera</ion-button>
+    <ion-button expand="full" [disabled]="true">Galery</ion-button>
+    <ion-button expand="full" [disabled]="true">Exit</ion-button>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title size="small">Gallery</ion-title>
+      <ion-toggle slot="end" [enableOnOffLabels]="true" [checked]="false">Filters</ion-toggle>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <!-- content here -->
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
+          <ion-img [src]="photo.webviewPath" class={{classValue}} (click)="showActionSheet(photo, position)"></ion-img>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <!-- <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+      <ion-fab-button (click)="photoService.addNewToGallery(classValue)">
+        <ion-icon name="camera"></ion-icon>
+      </ion-fab-button>
+    </ion-fab> -->
+  </ion-content>
+
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title size="small">ColorFulMe App | Team Sentinel - Hackaton © 2023</ion-title>
+    </ion-toolbar>
+  </ion-footer>
+</div>
