--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
 <ion-app>
-  <div [@routeAnimations]="getRouteAnimationData()">
-    <ion-router-outlet></ion-router-outlet>
-  </div>
+  <ion-menu contentId="content1" side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <div [@routeAnimations]="getRouteAnimationData()">
+        <ion-router-outlet></ion-router-outlet>
+      </div>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="content1" main></ion-router-outlet>
 </ion-app>
