--- a/src/app/page/assessment-screen/assessment-screen.page.html
+++ b/src/app/page/assessment-screen/assessment-screen.page.html
@@ -1,11 +1,27 @@
-<ion-content [fullscreen]="true">
-  <div class="background">
-    <ion-header collapse="condense">
-      <ion-toolbar>
-        <ion-title size="large">Ishihara test</ion-title>
-      </ion-toolbar>
-    </ion-header>
-
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-button href="/assessment" expand="full" [disabled]="true">Perform Color Assessment</ion-button>
+    <ion-button expand="full" [disabled]="true">Adjust Color</ion-button>
+    <ion-button expand="full" (click)="openCam()">View Camera</ion-button>
+    <ion-button expand="full">Galery</ion-button>
+    <ion-button expand="full" [disabled]="true">Exit</ion-button>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title size="small">Perform Color Assessment - Ishihara Test</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
     <ion-card>
       <p align="center">
         <img alt="Silhouette of mountains" height="200 px" width="200 px" src="/assets/ishihara-images/plate1.png" />
@@ -152,5 +168,20 @@
         </ion-content>
       </ng-template>
     </ion-modal>
+  </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title size="small">ColorFulMe App | Team Sentinel - Hackaton © 2023</ion-title>
+    </ion-toolbar>
+  </ion-footer>
+</div>
+
+<!-- <ion-content [fullscreen]="true">
+  <div class="background">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Ishihara test</ion-title>
+      </ion-toolbar>
+    </ion-header>
   </div>
-</ion-content>
+</ion-content> -->
