--- a/src/app/page/camera-screen/camera-screen.page.scss
+++ b/src/app/page/camera-screen/camera-screen.page.scss
@@ -1,5 +1,9 @@
-ion-content ion-toolbar {
-  --background: translucent;
+// ion-content ion-toolbar {
+//   --background: translucent;
+// }
+
+ion-footer {
+  text-align: center;
 }
 
 .imageNormal {
