--- a/src/app/page/start-screen/start-screen.page.scss
+++ b/src/app/page/start-screen/start-screen.page.scss
@@ -13,6 +13,10 @@
   width: auto;
 }
 
+ion-footer {
+  text-align: center;
+}
+
 .container1 {
   background-color: rgba(232, 232, 232, 0.8);
   display: flow-root;
