--- a/src/app/page/assessment-screen/assessment-screen.page.html
+++ b/src/app/page/assessment-screen/assessment-screen.page.html
@@ -8,7 +8,7 @@
     <ion-button href="/assessment" expand="full" [disabled]="true">Perform Color Assessment</ion-button>
     <ion-button expand="full" [disabled]="true">Adjust Color</ion-button>
     <ion-button expand="full" (click)="openCam()">View Camera</ion-button>
-    <ion-button expand="full">Galery</ion-button>
+    <ion-button expand="full" (click)="openGallery()">Galery</ion-button>
     <ion-button expand="full" [disabled]="true">Exit</ion-button>
   </ion-content>
 </ion-menu>
