fixed image filter

--- a/src/app/page/assessment-screen/assessment-screen.page.html
+++ b/src/app/page/assessment-screen/assessment-screen.page.html
@@ -154,7 +154,7 @@
             </ion-item>
           </ion-list>
         </ion-card-header>-->
-        <ion-button (click)="setOpen(true)">Asses</ion-button>
+        <ion-button (click)="setOpen(true)">Assess</ion-button>
       </p>
     </ion-card>
     <ion-modal [isOpen]="isModalOpen">
