pt-testing-camera: removed custom animations update. fix menu

--- a/src/app/page/assessment-screen/assessment-screen.page.html
+++ b/src/app/page/assessment-screen/assessment-screen.page.html
@@ -5,11 +5,11 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-button href="/assessment" expand="full" [disabled]="true">Perform Color Assessment</ion-button>
-    <ion-button expand="full" [disabled]="true">Adjust Color</ion-button>
-    <ion-button expand="full" (click)="openCam()">View Camera</ion-button>
-    <ion-button expand="full" (click)="openGallery()">Galery</ion-button>
-    <ion-button expand="full" [disabled]="true">Exit</ion-button>
+    <ion-button size="small" expand="full" [disabled]="true">Perform Color Assessment</ion-button>
+    <ion-button size="small" expand="full" [disabled]="true" color="medium">Adjust Color</ion-button>
+    <ion-button size="small" expand="full" (click)="openCam()">View Camera</ion-button>
+    <ion-button size="small" expand="full" (click)="openGallery()">Gallery</ion-button>
+    <ion-button size="small" expand="full" [disabled]="true" color="medium">Exit</ion-button>
   </ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
