--- a/src/app/page/camera-screen/camera-screen.page.html
+++ b/src/app/page/camera-screen/camera-screen.page.html
@@ -5,11 +5,11 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-button expand="full" href="/assessment">Perform Color Assessment</ion-button>
-    <ion-button expand="full" [disabled]="true">Adjust Color</ion-button>
-    <ion-button expand="full" (click)="photoService.addNewToGallery(classValue)">View Camera</ion-button>
-    <ion-button expand="full" [disabled]="true">Galery</ion-button>
-    <ion-button expand="full" [disabled]="true">Exit</ion-button>
+    <ion-button size="small" expand="full" (click)="openAssessment()">Perform Color Assessment</ion-button>
+    <ion-button size="small" expand="full" [disabled]="true" color="medium">Adjust Color</ion-button>
+    <ion-button size="small" expand="full" (click)="photoService.addNewToGallery(classValue)">View Camera</ion-button>
+    <ion-button size="small" expand="full" [disabled]="true">Gallery</ion-button>
+    <ion-button size="small" expand="full" [disabled]="true" color="medium">Exit</ion-button>
   </ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
