--- a/src/app/page/start-screen/start-screen.page.html
+++ b/src/app/page/start-screen/start-screen.page.html
@@ -2,33 +2,27 @@
   <ion-card class="main-container">
     <form [formGroup]="form" class="container1">
       <ion-item>
-        <ion-label position="floating">Email Address</ion-label>
-        <ion-input type="email" required="true" formControlName="email"></ion-input>
+        <ion-input label="Email Address" type="email" required="true" formControlName="email"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Username</ion-label>
-        <ion-input type="email" required="true" formControlName="username"></ion-input>
+        <ion-input label="Username" type="email" required="true" formControlName="username"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
-        <ion-input type="password" required="true" formControlName="password"></ion-input>
+        <ion-input label="Password" type="password" required="true" formControlName="password"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">First Name</ion-label>
-        <ion-input type="string" required="true" formControlName="firstName"></ion-input>
+        <ion-input label="First Name" type="string" required="true" formControlName="firstName"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Last Name</ion-label>
-        <ion-input type="string" required="true" formControlName="lastName"></ion-input>
+        <ion-input label="Last Name" type="string" required="true" formControlName="lastName"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Age</ion-label>
-        <ion-input type="number" required="true" formControlName="age"></ion-input>
+        <ion-input label="Age" type="number" required="true" formControlName="age"></ion-input>
       </ion-item>
       <ion-button color="success" size="full" (click)="createUser()">Next</ion-button>
     </form>
