--- a/src/app/page/camera-screen/camera-screen.page.html
+++ b/src/app/page/camera-screen/camera-screen.page.html
@@ -5,11 +5,24 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-button size="small" expand="full" (click)="openAssessment()">Perform Color Assessment</ion-button>
-    <ion-button size="small" expand="full" [disabled]="true" color="medium">Adjust Color</ion-button>
-    <ion-button size="small" expand="full" (click)="photoService.addNewToGallery(classValue)">View Camera</ion-button>
-    <ion-button size="small" expand="full" [disabled]="true">Gallery</ion-button>
-    <ion-button size="small" expand="full" [disabled]="true" color="medium">Exit</ion-button>
+    <ion-button size="small" expand="full" (click)="openAssessment()"
+      >Perform Color Assessment</ion-button
+    >
+    <ion-button size="small" expand="full" [disabled]="true" color="medium"
+      >Adjust Color</ion-button
+    >
+    <ion-button
+      size="small"
+      expand="full"
+      (click)="photoService.addNewToGallery(classValue)"
+      >View Camera</ion-button
+    >
+    <ion-button size="small" expand="full" [disabled]="true"
+      >Gallery</ion-button
+    >
+    <ion-button size="small" expand="full" [disabled]="true" color="medium"
+      >Exit</ion-button
+    >
   </ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
@@ -21,7 +34,13 @@
       <ion-title size="Medium">Gallery</ion-title>
       <!--ion-toggle slot="end" [enableOnOffLabels]="true" [checked]="photoService.checkBoxed"
         (ionChange)="photoService.loadpictures($event)">Filters</ion-toggle-->
-      <ion-button id="open-action-sheet" size="small" slot="end" (click)="showActionSheetFilter()">Filters</ion-button>
+      <ion-button
+        id="open-action-sheet"
+        size="small"
+        slot="end"
+        (click)="showActionSheetFilter()"
+        >Filters</ion-button
+      >
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
@@ -29,8 +48,15 @@
     <!-- content here -->
     <ion-grid>
       <ion-row>
-        <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
-          <ion-img [src]="photo.webviewPath" class={{classValue}} (click)="showActionSheet(photo, position)"></ion-img>
+        <ion-col
+          size="6"
+          *ngFor="let photo of photoService.photos; index as position"
+        >
+          <ion-img
+            [src]="photo.webviewPath"
+            class="{{classValue}}"
+            (click)="showActionSheet(photo, position)"
+          ></ion-img>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -47,7 +73,9 @@
     <ion-button (click)="photoService.loadpictures('imageDeuteranopia')">Deuteranopia</ion-button>
     <ion-button (click)="photoService.loadpictures('imageProtanopia')">Protanopia</ion-button-->
     <ion-toolbar>
-      <ion-title size="small">ColorFulMe App | Team Sentinel - Hackaton © 2023</ion-title>
+      <ion-title size="small"
+        >ColorFulMe App | Team Sentinel - Hackaton © 2023</ion-title
+      >
     </ion-toolbar>
   </ion-footer>
 </div>
