--- a/src/app/page/camera-screen/camera-screen.page.scss
+++ b/src/app/page/camera-screen/camera-screen.page.scss
@@ -11,7 +11,7 @@ ion-footer {
 }
 
 .imageProtanopia {
-  filter: hue-rotate(10deg);
+  filter: hue-rotate(10deg) saturate(4);
 }
 
 .imageTritanopia {
@@ -19,7 +19,7 @@ ion-footer {
 }
 
 .imageDeuteranopia {
-  filter: contrast(200%);
+  filter: contrast(200%) saturate(4);
 }
 
 .imageRedGreen {
